--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postbuild": "wasm-gc target/wasm32-unknown-unknown/release/module.wasm -o build/module.min.wasm",
     "pretest": "npm run build",
     "test": "standard && tap ./test.js && cargo test",
-    "prepublish": "test"
+    "prepack": "npm run test"
   },
   "keywords": [
     "rust",
@@ -25,6 +25,8 @@
     "tap": "^11.1.1"
   },
   "standard": {
-    "globals": [ "WebAssembly" ]
+    "globals": [
+      "WebAssembly"
+    ]
   }
 }
