add a step to package wasm into a requirable file for browser usage

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "prebuild": "mkdirp ./build && rimraf ./build/*",
     "build": "cargo +nightly build --target wasm32-unknown-unknown --release",
-    "postbuild": "wasm-gc target/wasm32-unknown-unknown/release/module.wasm -o build/module.min.wasm",
+    "gc-wasm": "wasm-gc target/wasm32-unknown-unknown/release/module.wasm -o build/module.min.wasm",
+    "requirify-wasm": "echo \"module.exports = new Uint8Array([`node -e \"console.log(new Uint8Array(fs.readFileSync('./build/module.min.wasm')).toString())\"`])\" > ./build/wasm.js",
+    "postbuild": "npm run gc-wasm && npm run requirify-wasm",
     "pretest": "npm run build",
     "test": "standard && tap ./test.js && cargo test",
     "prepack": "npm run test"
@@ -27,6 +29,9 @@
   "standard": {
     "globals": [
       "WebAssembly"
+    ],
+    "ignore": [
+      "./build/"
     ]
   }
 }
