--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "mkdirp ./build && rimraf ./build/*",
     "build": "cargo +nightly build --target wasm32-unknown-unknown --release",
     "gc-wasm": "wasm-gc target/wasm32-unknown-unknown/release/module.wasm -o build/module.min.wasm",
-    "requirify-wasm": "echo \"module.exports = new Uint8Array([`node -e \"console.log(new Uint8Array(fs.readFileSync('./build/module.min.wasm')).toString())\"`])\" > ./build/wasm.js",
+    "requirify-wasm": "requirise-wasm -i ./build/module.min.wasm -o ./build/wasm.js",
     "postbuild": "npm run gc-wasm && npm run requirify-wasm",
     "benchmark": "npm run build && node ./benchmark.js",
     "pretest": "npm run build",
@@ -23,7 +23,9 @@
   "license": "MIT",
   "dependencies": {
     "benchmark": "^2.1.4",
+    "initialise-wasm": "0.0.1",
     "mkdirp": "^0.5.1",
+    "requirise-wasm": "0.0.2",
     "rimraf": "^2.6.2",
     "standard": "^11.0.0",
     "tap": "^11.1.1"
