--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "standard": {
     "globals": [
-      "WebAssembly"
+      "WebAssembly",
+      "TextEncoder",
+      "TextDecoder"
     ],
     "ignore": [
       "./build/"
